# watchdog

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  install.sh
.github/workflows/: cd.yml  wd.yml
docs/: CONTRIBUTING.md  LICENSE.md  pull_request_template.md
docs/config/: wd-pr.yml  wd-push.yml
docs/workflows/: composite.yml  reusable.yml  watch-flow.yml  workflow.yml
src/: domain.rs  main.rs
