[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
ferris-says = "0.3.1"
regex = "1.10.3"
reqwest = { version ="0.11.24", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.21.7"
